@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
 * [mms] Fix regression in altering sort direction in dynamic mailbox view (Bug #11300).
 * [mms] Hide empty MIME parts when displaying inline.
 * [mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
@@ -2621,6 +2622,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
 * [mms] Fix regression in altering sort direction in dynamic mailbox view (Bug #11300).
 * [mms] Hide empty MIME parts when displaying inline.
 * [mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
